add git commands

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title>Lessong 9 GitHub</title>
 </head>
 <body>
-    
+    <pre>
+        $ git config --global user.name "[имя]"
+        $ git config --global user.email "[адрес электронной почты]"
+        $ git init [название проекта]
+        $ git status
+        $ git add [файл]
+        $ git add .
+        $ git commit -m "[сообщение с описанием]"
+        $ git log
+        $ git diff
+        $ git reset [коммит]
+        $ git reset --hard [коммит]
+        $ git branch
+        $ git checkout -b "[название ветки]"
+        $ git checkout [название ветки]
+        $ git checkout [хеш коммита]
+        $ git merge [имя ветки]
+        $ git branch -d [имя ветки]
+        $ git push -u origin [название ветки]
+    </pre>
 </body>
 </html>
