--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Lessong 9 GitHub</title>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <a href="./gallery.html">Gallery</a>
+        </nav>
+    </header>
     <pre>
         $ git config --global user.name "[имя]"
         $ git config --global user.email "[адрес электронной почты]"
@@ -26,4 +32,5 @@
         $ git push -u origin [название ветки]
     </pre>
 </body>
+
 </html>
