--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Gallery</title>
-    </head>
-    <body>
-        <img width="100%" src="./gallery/gallery_1.jpg" alt="Mountain">
-        <img width="100%" src="./gallery/gallery_2.jpg" alt="Nature">
-        <img width="100%" src="./gallery/gallery_3.jpg" alt="Cat">
-    </body>
+<html lang="en">
+
+<head>
+    <title>Gallery</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="./index.html">Home</a>
+        </nav>
+    </header>
+    <img width="100%" src="./gallery/gallery_1.jpg" alt="Mountain">
+    <img width="100%" src="./gallery/gallery_2.jpg" alt="Nature">
+    <img width="100%" src="./gallery/gallery_3.jpg" alt="Cat">
+</body>
+
 </html>
